tests/neg-custom-args/captures/cc-this3.check
-- [E058] Type Mismatch Error: tests/neg-custom-args/captures/cc-this3.scala:9:6 ---------------------------------------
9 |class B extends A: // error
  |      ^
  |      illegal inheritance: self type B^ of class B does not conform to self type A^{}
  |      of parent class A
  |
  |      where:    ^ refers to the root capability caps.any
  |
  | longer explanation available when compiling with `-explain`
-- [E058] Type Mismatch Error: tests/neg-custom-args/captures/cc-this3.scala:12:6 --------------------------------------
12 |class C(val f: () => Int) extends A // error
   |      ^
   |      illegal inheritance: self type C^{C.this.f} of class C does not conform to self type A^{}
   |      of parent class A
   |
   | longer explanation available when compiling with `-explain`
